--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,3 +3,5 @@
 @import "./components/logo";
 @import "./components/countries";
 @import "./components/card";
+@import "./pages/news";
+@import "./components/article";
